fixed buybutton visibility and buket layout

--- a/style.css
+++ b/style.css
@@ -394,3 +394,7 @@
   border: none;
   align-self: flex-end;
 }
+
+.no-scroll {
+  overflow: hidden;
+}
