--- a/styles/basket.css
+++ b/styles/basket.css
@@ -5,12 +5,11 @@
   color: #FDEADC;
   font-size: 24px;
   text-align: center;
-  margin-left: 25px;
+  padding-bottom: 200px;
 }
 
 .basket_header {
   text-align: center;
-  margin-left: 35%;
   color: #FDEADC;
 }
 
@@ -25,7 +24,6 @@
   flex-direction: column;
   justify-content: center;
   padding: 20px;
-  margin: 20px;
   overflow-x: hidden;
 }
 
@@ -42,13 +40,18 @@
   align-self: flex-start;
   background-color: #363534;
   border-radius: 20px 0 0 20px;
+  height: auto;          
+  overflow: visible;     
+  display: flex;
+  justify-content: center;
 }
 
 .basket_content {
-  width: 100%;
+  width: 240px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
 }
 
 .basket_content_mobile {
@@ -80,14 +83,10 @@
 }
 
 #basket::-webkit-scrollbar-thumb {
-  background-color: #363534;
+  background-color: #FDEADC;
 }
 
 .number_interface_basket {
   display: flex;
   align-items: center;
-}
-
-.basket_overlay.open {
-  height: calc(80vh - 50px);
 }
